--- a/DSImager.Core/DSImager.Core.csproj
+++ b/DSImager.Core/DSImager.Core.csproj
@@ -59,15 +59,19 @@
     <Compile Include="Interfaces\IApplication.cs" />
     <Compile Include="Interfaces\ICamera.cs" />
     <Compile Include="Interfaces\ICameraService.cs" />
+    <Compile Include="Interfaces\IImagingService.cs" />
     <Compile Include="Interfaces\ILogService.cs" />
     <Compile Include="Interfaces\IView.cs" />
     <Compile Include="Interfaces\IViewModel.cs" />
     <Compile Include="Interfaces\IViewProvider.cs" />
     <Compile Include="Models\CameraCapabilities.cs" />
     <Compile Include="Models\CameraInfo.cs" />
+    <Compile Include="Models\LogMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CameraService.cs" />
+    <Compile Include="Services\ImagingService.cs" />
     <Compile Include="Services\LogService.cs" />
+    <Compile Include="System\Rect.cs" />
     <Compile Include="System\ViewProvider.cs" />
     <Compile Include="Utils\PropertyChangedExtendedEventArgs.cs" />
   </ItemGroup>
