--- a/DSImager.Core/DSImager.Core.csproj
+++ b/DSImager.Core/DSImager.Core.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -42,6 +43,10 @@
     <Reference Include="ASCOM.SettingsProvider, Version=6.0.0.0, Culture=neutral, PublicKeyToken=565de7938946fba7, processorArchitecture=MSIL" />
     <Reference Include="ASCOM.Utilities, Version=6.0.0.0, Culture=neutral, PublicKeyToken=565de7938946fba7, processorArchitecture=MSIL" />
     <Reference Include="ASCOM.Utilities.Video, Version=6.1.0.0, Culture=neutral, PublicKeyToken=565de7938946fba7, processorArchitecture=MSIL" />
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.8.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="SimpleInjector, Version=3.1.0.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\SimpleInjector.3.1.0\lib\net45\SimpleInjector.dll</HintPath>
@@ -62,6 +67,7 @@
     <Compile Include="Interfaces\IDeviceProvider.cs" />
     <Compile Include="Interfaces\IImagingService.cs" />
     <Compile Include="Interfaces\ILogService.cs" />
+    <Compile Include="Interfaces\IStorageService.cs" />
     <Compile Include="Interfaces\IView.cs" />
     <Compile Include="Interfaces\IViewModel.cs" />
     <Compile Include="Interfaces\IViewProvider.cs" />
@@ -69,12 +75,16 @@
     <Compile Include="Models\CameraInfo.cs" />
     <Compile Include="Models\Exposure.cs" />
     <Compile Include="Models\ExposureMetaData.cs" />
+    <Compile Include="Models\ImageSequence.cs" />
+    <Compile Include="Models\ImagingSession.cs" />
     <Compile Include="Models\LogMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CameraService.cs" />
     <Compile Include="Services\ImagingService.cs" />
     <Compile Include="Services\LogService.cs" />
+    <Compile Include="Services\StorageService.cs" />
     <Compile Include="System\DeviceProvider.cs" />
+    <Compile Include="System\PpmWriter.cs" />
     <Compile Include="System\Rect.cs" />
     <Compile Include="System\ViewProvider.cs" />
     <Compile Include="Utils\PropertyChangedExtendedEventArgs.cs" />
