--- a/DSImager.ViewModels/DSImager.ViewModels.csproj
+++ b/DSImager.ViewModels/DSImager.ViewModels.csproj
@@ -52,7 +52,10 @@
     <Compile Include="ConnectDialogViewModel.cs" />
     <Compile Include="DeviceInfoViewModel.cs" />
     <Compile Include="MainViewModel.cs" />
+    <Compile Include="States\IViewState.cs" />
+    <Compile Include="States\MainViewState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="States\ViewState.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DSImager.Core\DSImager.Core.csproj">
