--- a/DSImager.Application/DSImager.Application.csproj
+++ b/DSImager.Application/DSImager.Application.csproj
@@ -76,6 +76,7 @@
     </ApplicationDefinition>
     <Compile Include="Controls\PreviewExposureSlider.cs" />
     <Compile Include="Controls\ZoomableBorder.cs" />
+    <Compile Include="Converters\BooleanInverter.cs" />
     <Compile Include="Converters\ButtonStateContentConverter.cs" />
     <Compile Include="Converters\ComposingConverter.cs" />
     <Compile Include="Converters\ExposureToImageConverter.cs" />
@@ -89,6 +90,7 @@
     <Compile Include="Converters\SelectedListIndexItemToStringConverter.cs" />
     <Compile Include="Converters\MainViewUiStateToVisibilityConverter.cs" />
     <Compile Include="Converters\VisibilityConverter.cs" />
+    <Compile Include="Converters\XyListToPointCollectionConverter.cs" />
     <Compile Include="Utils\ButtonStateContent.cs" />
     <Compile Include="Utils\ListExtensions.cs" />
     <Compile Include="Views\BaseView.cs" />
@@ -98,12 +100,19 @@
     <Compile Include="Views\DeviceInfoDialog.xaml.cs">
       <DependentUpon>DeviceInfoDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\HistogramDialog.xaml.cs">
+      <DependentUpon>HistogramDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="WpfApplication.cs" />
     <Page Include="Views\ConnectDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\DeviceInfoDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\HistogramDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
