--- a/DSImager.ViewModels/DSImager.ViewModels.csproj
+++ b/DSImager.ViewModels/DSImager.ViewModels.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="BaseViewModel.cs" />
     <Compile Include="CommandHandler.cs" />
+    <Compile Include="HistogramDialogViewModel.cs" />
     <Compile Include="ConnectDialogViewModel.cs" />
     <Compile Include="DeviceInfoViewModel.cs" />
     <Compile Include="MainViewModel.cs" />
