--- a/DSImager.Application/DSImager.Application.csproj
+++ b/DSImager.Application/DSImager.Application.csproj
@@ -103,6 +103,9 @@
     <Compile Include="Views\HistogramDialog.xaml.cs">
       <DependentUpon>HistogramDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\SessionDialog.xaml.cs">
+      <DependentUpon>SessionDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="WpfApplication.cs" />
     <Page Include="Views\ConnectDialog.xaml">
       <SubType>Designer</SubType>
@@ -131,6 +134,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\SessionDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
