--- a/DSImager.Application/DSImager.Application.csproj
+++ b/DSImager.Application/DSImager.Application.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Converters\ListLengthMinusOneConverter.cs" />
     <Compile Include="Converters\ListToIndexListConverter.cs" />
     <Compile Include="Converters\LogCategoryToIconConverter.cs" />
+    <Compile Include="Converters\NotNullConverter.cs" />
     <Compile Include="Converters\NumberListDoubleCollectionConverter.cs" />
     <Compile Include="Converters\CompareAndConvertToBooleanConverter.cs" />
     <Compile Include="Converters\BrushForSelectionConverter.cs" />
