More work on session dialog. Refactoring and work on ImagingService to enable starting, pausing and canceling imaging sessions. Started adding tests for ImagingService. Combined BinX and BinY to a single int value BinXY in the ImageSequence model.

--- a/DSImager.Tests/DSImager.Tests.csproj
+++ b/DSImager.Tests/DSImager.Tests.csproj
@@ -58,6 +58,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Bootstrapper.cs" />
+    <Compile Include="Services\ImagingServiceTests.cs" />
     <Compile Include="Services\StorageServiceTests.cs" />
     <Compile Include="Services\CameraServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
