--- a/DSImager.Application/DSImager.Application.csproj
+++ b/DSImager.Application/DSImager.Application.csproj
@@ -79,7 +79,9 @@
     <Compile Include="Converters\BooleanInverter.cs" />
     <Compile Include="Converters\ButtonStateContentConverter.cs" />
     <Compile Include="Converters\ComposingConverter.cs" />
+    <Compile Include="Converters\BoolMultiConverter.cs" />
     <Compile Include="Converters\ExposureToImageConverter.cs" />
+    <Compile Include="Converters\InvertBooleanConverter.cs" />
     <Compile Include="Converters\ListItemFromIndexConverter.cs" />
     <Compile Include="Converters\ListLengthMinusOneConverter.cs" />
     <Compile Include="Converters\ListToIndexListConverter.cs" />
@@ -90,9 +92,12 @@
     <Compile Include="Converters\BrushForSelectionConverter.cs" />
     <Compile Include="Converters\SelectedListIndexItemToStringConverter.cs" />
     <Compile Include="Converters\MainViewUiStateToVisibilityConverter.cs" />
+    <Compile Include="Converters\StringDoubleConverter.cs" />
+    <Compile Include="Converters\StringToIntConverter.cs" />
     <Compile Include="Converters\VisibilityConverter.cs" />
     <Compile Include="Converters\XyListToPointCollectionConverter.cs" />
     <Compile Include="Utils\ButtonStateContent.cs" />
+    <Compile Include="Utils\InvokeDelegateCommandAction.cs" />
     <Compile Include="Utils\ListExtensions.cs" />
     <Compile Include="Views\BaseView.cs" />
     <Compile Include="Bootstrapper.cs" />
