--- a/DSImager.Core/DSImager.Core.csproj
+++ b/DSImager.Core/DSImager.Core.csproj
@@ -44,10 +44,15 @@
     <Reference Include="ASCOM.SettingsProvider, Version=6.0.0.0, Culture=neutral, PublicKeyToken=565de7938946fba7, processorArchitecture=MSIL" />
     <Reference Include="ASCOM.Utilities, Version=6.0.0.0, Culture=neutral, PublicKeyToken=565de7938946fba7, processorArchitecture=MSIL" />
     <Reference Include="ASCOM.Utilities.Video, Version=6.1.0.0, Culture=neutral, PublicKeyToken=565de7938946fba7, processorArchitecture=MSIL" />
+    <Reference Include="CSharpFITS_v1.1, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\CSharpFITS.1.1\lib\Net20\CSharpFITS_v1.1.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.8.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="SimpleInjector, Version=3.1.0.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\SimpleInjector.3.1.0\lib\net45\SimpleInjector.dll</HintPath>
@@ -59,6 +64,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Devices\AscomCamera.cs" />
@@ -66,6 +72,9 @@
     <Compile Include="Interfaces\ICamera.cs" />
     <Compile Include="Interfaces\ICameraService.cs" />
     <Compile Include="Interfaces\IDeviceProvider.cs" />
+    <Compile Include="Interfaces\IImageIoService.cs" />
+    <Compile Include="Interfaces\IImageReader.cs" />
+    <Compile Include="Interfaces\IImageWriter.cs" />
     <Compile Include="Interfaces\IImagingService.cs" />
     <Compile Include="Interfaces\ILogService.cs" />
     <Compile Include="Interfaces\IStorageService.cs" />
@@ -77,15 +86,18 @@
     <Compile Include="Models\Exposure.cs" />
     <Compile Include="Models\ExposureMetaData.cs" />
     <Compile Include="Models\ExposureVisualSettings.cs" />
+    <Compile Include="Models\ImageFileFormat.cs" />
     <Compile Include="Models\ImageSequence.cs" />
     <Compile Include="Models\ImagingSession.cs" />
     <Compile Include="Models\LogMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CameraService.cs" />
+    <Compile Include="Services\ImageIoService.cs" />
     <Compile Include="Services\ImagingService.cs" />
     <Compile Include="Services\LogService.cs" />
     <Compile Include="Services\StorageService.cs" />
     <Compile Include="System\DeviceProvider.cs" />
+    <Compile Include="System\FitsWriter.cs" />
     <Compile Include="System\PpmWriter.cs" />
     <Compile Include="System\Rect.cs" />
     <Compile Include="System\ViewProvider.cs" />
