Added empty TemperatureDialog, adjusted the pause pane information. Reversed the log list, last message is now on the bottom of the list instead of top.

--- a/DSImager.Application/DSImager.Application.csproj
+++ b/DSImager.Application/DSImager.Application.csproj
@@ -117,6 +117,9 @@
     <Compile Include="Views\SessionDialog.xaml.cs">
       <DependentUpon>SessionDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\TemperatureDialog.xaml.cs">
+      <DependentUpon>TemperatureDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="WpfApplication.cs" />
     <Page Include="Views\ConnectDialog.xaml">
       <SubType>Designer</SubType>
@@ -146,6 +149,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Views\SessionDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\TemperatureDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
