--- a/DSImager.ViewModels/DSImager.ViewModels.csproj
+++ b/DSImager.ViewModels/DSImager.ViewModels.csproj
@@ -58,6 +58,7 @@
     <Compile Include="States\MainViewState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="States\ViewState.cs" />
+    <Compile Include="TemperatureDialogViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DSImager.Core\DSImager.Core.csproj">
