TemperatureDialog almost done, still needs the graph rendering. Added PeriodicWorkRunner for running repeating asynchronous tasks. CameraService now implements most temperature specific functionality; slowly starting to move away from the ASCOM ICameraV2 interface. + a few other minor fixes and additions.

--- a/DSImager.Application/DSImager.Application.csproj
+++ b/DSImager.Application/DSImager.Application.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Converters\StringToIntConverter.cs" />
     <Compile Include="Converters\VisibilityConverter.cs" />
     <Compile Include="Converters\XyListToPointCollectionConverter.cs" />
+    <Compile Include="Utils\AllowableCharactersTextBoxBehaviour.cs" />
     <Compile Include="Utils\ButtonStateContent.cs" />
     <Compile Include="Utils\InvokeDelegateCommandAction.cs" />
     <Compile Include="Utils\ListExtensions.cs" />
