--- a/DSImager.Tests/packages.config
+++ b/DSImager.Tests/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NUnit" version="3.0.1" targetFramework="net45" />
-  <package id="SimpleInjector" version="3.1.0" targetFramework="net45" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
+  <package id="Moq" version="4.5.21" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="NUnit" version="3.4.1" targetFramework="net452" />
+  <package id="SimpleInjector" version="3.2.2" targetFramework="net452" />
 </packages>
