Implemented saving session images to session output directory.

--- a/DSImager.Core/DSImager.Core.csproj
+++ b/DSImager.Core/DSImager.Core.csproj
@@ -135,6 +135,7 @@
     <Compile Include="System\XY.cs" />
     <Compile Include="Utils\PeriodicWorkRunner.cs" />
     <Compile Include="Utils\PropertyChangedExtendedEventArgs.cs" />
+    <Compile Include="Utils\StringExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
