--- a/DSImager.Core/DSImager.Core.csproj
+++ b/DSImager.Core/DSImager.Core.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Interfaces\IImageWriter.cs" />
     <Compile Include="Interfaces\IImagingService.cs" />
     <Compile Include="Interfaces\ILogService.cs" />
+    <Compile Include="Interfaces\IProgramSettingsManager.cs" />
     <Compile Include="Interfaces\IStorageService.cs" />
     <Compile Include="Interfaces\ISystemEnvironment.cs" />
     <Compile Include="Interfaces\IView.cs" />
@@ -120,11 +121,13 @@
     <Compile Include="Models\ImageSequence.cs" />
     <Compile Include="Models\ImagingSession.cs" />
     <Compile Include="Models\LogMessage.cs" />
+    <Compile Include="Models\ProgramSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CameraService.cs" />
     <Compile Include="Services\ImageIoService.cs" />
     <Compile Include="Services\ImagingService.cs" />
     <Compile Include="Services\LogService.cs" />
+    <Compile Include="Services\ProgramSettingsManager.cs" />
     <Compile Include="Services\StorageService.cs" />
     <Compile Include="System\CameraProvider.cs" />
     <Compile Include="System\DeviceProvider.cs" />
