Dark frame dialog in progress, some temporary key bindings for main window

--- a/DSImager.ViewModels/DSImager.ViewModels.csproj
+++ b/DSImager.ViewModels/DSImager.ViewModels.csproj
@@ -64,6 +64,7 @@
     <Compile Include="BiasFrameDialogViewModel.cs" />
     <Compile Include="CommandHandler.cs" />
     <Compile Include="ConnectDialogViewModel.cs" />
+    <Compile Include="DarkFrameDialogViewModel.cs" />
     <Compile Include="DeviceInfoViewModel.cs" />
     <Compile Include="HistogramDialogViewModel.cs" />
     <Compile Include="MainViewModel.cs" />
