--- a/DSImager.Application/DSImager.Application.csproj
+++ b/DSImager.Application/DSImager.Application.csproj
@@ -109,6 +109,7 @@
     <Compile Include="AppPlatform\SystemEnvironment.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="CommandHandler.cs" />
+    <Compile Include="Converters\RecentExposureTimeToSequenceNamesConverter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Utils\AllowableCharactersTextBoxBehaviour.cs" />
     <Compile Include="Utils\ButtonStateContent.cs" />
@@ -121,6 +122,9 @@
     </Compile>
     <Compile Include="Views\ConnectDialog.xaml.cs">
       <DependentUpon>ConnectDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\DarkFrameDialog.xaml.cs">
+      <DependentUpon>DarkFrameDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\DeviceInfoDialog.xaml.cs">
       <DependentUpon>DeviceInfoDialog.xaml</DependentUpon>
@@ -176,6 +180,10 @@
     <Page Include="Views\ConnectDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\DarkFrameDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\DeviceInfoDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
