Flat frame capture and exposure auto-detection implemented

--- a/DSImager.Tests/DSImager.Tests.csproj
+++ b/DSImager.Tests/DSImager.Tests.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Services\CameraServiceTests.cs" />
     <Compile Include="Services\ImagingServiceTests.cs" />
     <Compile Include="Services\StorageServiceTests.cs" />
+    <Compile Include="Services\TargetAduFinderTests.cs" />
     <Compile Include="TestSetup.cs" />
   </ItemGroup>
   <ItemGroup>
