--- a/DSImager.Core/DSImager.Core.csproj
+++ b/DSImager.Core/DSImager.Core.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Interfaces\IStorageService.cs" />
     <Compile Include="Interfaces\ISystemEnvironment.cs" />
     <Compile Include="Interfaces\IAppVisualThemeManager.cs" />
+    <Compile Include="Interfaces\ITargetAduFinder.cs" />
     <Compile Include="Interfaces\IView.cs" />
     <Compile Include="Interfaces\IViewModel.cs" />
     <Compile Include="Interfaces\IViewProvider.cs" />
@@ -130,6 +131,7 @@
     <Compile Include="Services\LogService.cs" />
     <Compile Include="Services\ProgramSettingsManager.cs" />
     <Compile Include="Services\StorageService.cs" />
+    <Compile Include="Services\TargetAduFinder.cs" />
     <Compile Include="System\CameraProvider.cs" />
     <Compile Include="System\DeviceProvider.cs" />
     <Compile Include="System\FitsWriter.cs" />
